--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,13 +78,13 @@ set( PETSC_INC_DIR ${TMP}/include CACHE STRING INTERNAL )
 #set( SLEPC_INC_DIR ${TMP}/include CACHE STRING INTERNAL )
 
 # muParser library
-find_library( MUPARSER_LIBRARY NAMES muparser  PATHS ENV LD_LIBRARY_PATH NO_DEFAULT_PATH )
-if( NOT MUPARSER_LIBRARY )
-  message( FATAL_ERROR "Could not find libmuparser." )
-endif()
-get_filename_component( TMP ${MUPARSER_LIBRARY} PATH )
-get_filename_component( TMP ${TMP} PATH )
-set( MUPARSER_INC_DIR ${TMP}/include CACHE STRING INTERNAL )
+#find_library( MUPARSER_LIBRARY NAMES muparser  PATHS ENV LD_LIBRARY_PATH NO_DEFAULT_PATH )
+#if( NOT MUPARSER_LIBRARY )
+#  message( FATAL_ERROR "Could not find libmuparser." )
+#endif()
+#get_filename_component( TMP ${MUPARSER_LIBRARY} PATH )
+#get_filename_component( TMP ${TMP} PATH )
+#set( MUPARSER_INC_DIR ${TMP}/include CACHE STRING INTERNAL )
 
 ### deal.ii library paths
 find_library( DEAL_II_LIBRARY NAMES deal_II  PATHS ENV LD_LIBRARY_PATH NO_DEFAULT_PATH )
