--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,16 +26,16 @@ set( DIR_INC ${PROJECT_SOURCE_DIR}/include CACHE STRING INTERNAL )
 set( DIR_INC_2 ${PROJECT_SOURCE_DIR}/source/lib CACHE STRING INTERNAL )
 
 ### NLOPT library paths
-#find_library( NLOPT_LIBRARY NAMES nlopt PATHS ENV LD_LIBRARY_PATH NO_DEFAULT_PATH )
-#if( NOT NLOPT_LIBRARY )
-#  message( FATAL_ERROR "Could not find the nlopt library." )
-#endif()
-#get_filename_component( TMP ${NLOPT_LIBRARY} PATH )
-#get_filename_component( TMP ${TMP} PATH )
-#set( NLOPT_INC_DIR ${TMP}/include CACHE STRING INTERNAL )
-#if( NLOPT_LIBRARY )
-#  include_directories( ${NLOPT_INC_DIR} )
-#endif()
+find_library( NLOPT_LIBRARY NAMES nlopt PATHS ENV LD_LIBRARY_PATH NO_DEFAULT_PATH )
+if( NOT NLOPT_LIBRARY )
+  message( FATAL_ERROR "Could not find the nlopt library." )
+endif()
+get_filename_component( TMP ${NLOPT_LIBRARY} PATH )
+get_filename_component( TMP ${TMP} PATH )
+set( NLOPT_INC_DIR ${TMP}/include CACHE STRING INTERNAL )
+if( NLOPT_LIBRARY )
+  include_directories( ${NLOPT_INC_DIR} )
+endif()
 
 ### GSL library paths
 find_library( GSL_LIBRARY_1 NAMES gsl  PATHS ENV LD_LIBRARY_PATH NO_DEFAULT_PATH )
