almost ready, not tested

--- a/source/edu/CMakeLists.txt
+++ b/source/edu/CMakeLists.txt
@@ -1,3 +1,3 @@
 
-ADD_EXECUTABLE( quantum_mirror quantum_mirror.cpp )
-TARGET_LINK_LIBRARIES( quantum_mirror ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
+ADD_EXECUTABLE( edu_mpi edu_mpi.cpp )
+TARGET_LINK_LIBRARIES( edu_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY})
