nothing new here

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,7 @@ ADD_SUBDIRECTORY( source/utils )
 ADD_SUBDIRECTORY( source/case_gen )
 ADD_SUBDIRECTORY( source/stationary )
 #ADD_SUBDIRECTORY( source/resonances )
-#ADD_SUBDIRECTORY( source/trash )
+ADD_SUBDIRECTORY( source/trash )
 #ADD_SUBDIRECTORY( source/belen )
 ADD_SUBDIRECTORY( source/edu )
 #ADD_SUBDIRECTORY( source/cont )
