--- a/source/stationary/CMakeLists.txt
+++ b/source/stationary/CMakeLists.txt
@@ -1,3 +1,8 @@
+ADD_EXECUTABLE( my_newton_mpi my_newton_mpi.cpp )
+TARGET_LINK_LIBRARIES( my_newton_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${NLOPT_LIBRARY} ${MUPARSER_LIBRARY})
+
+ADD_EXECUTABLE( my_newton_cs_mpi my_newton_cs_mpi.cpp )
+TARGET_LINK_LIBRARIES( my_newton_cs_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${NLOPT_LIBRARY} )
 
 ADD_EXECUTABLE( breed_minj_mpi breed_minj_mpi.cpp )
 TARGET_LINK_LIBRARIES( breed_minj_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
@@ -8,8 +13,8 @@ TARGET_LINK_LIBRARIES( breed_minj_cs_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRA
 ADD_EXECUTABLE( breed_sob_mpi breed_sob_mpi.cpp )
 TARGET_LINK_LIBRARIES( breed_sob_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
 
-ADD_EXECUTABLE( my_newton_2_mpi my_newton_2_mpi.cpp )
-TARGET_LINK_LIBRARIES( my_newton_2_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
+ADD_EXECUTABLE( breed_1 breed_1.cpp )
+TARGET_LINK_LIBRARIES( breed_1 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${NLOPT_LIBRARY} )
 
 #ADD_EXECUTABLE( my_schroedinger_newton_v0_mpi my_schroedinger_newton_v0_mpi.cpp )
 #TARGET_LINK_LIBRARIES( my_schroedinger_newton_v0_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
