--- a/source/utils/CMakeLists.txt
+++ b/source/utils/CMakeLists.txt
@@ -8,6 +8,9 @@ TARGET_LINK_LIBRARIES( binC_to_atus2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1
 ADD_EXECUTABLE( binR_to_binC binR_to_binC.cpp )
 TARGET_LINK_LIBRARIES( binR_to_binC ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
 
+ADD_EXECUTABLE( binR_to_binC_1 binR_to_binC_1.cpp )
+TARGET_LINK_LIBRARIES( binR_to_binC_1 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
+
 #ADD_EXECUTABLE( gen_qsubs gen_qsubs.cpp )
 #TARGET_LINK_LIBRARIES( gen_qsubs ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
 
