--- a/source/stationary/CMakeLists.txt
+++ b/source/stationary/CMakeLists.txt
@@ -1,8 +1,8 @@
-ADD_EXECUTABLE( my_newton_mpi my_newton_mpi.cpp )
-TARGET_LINK_LIBRARIES( my_newton_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${NLOPT_LIBRARY} ${MUPARSER_LIBRARY})
+ADD_EXECUTABLE( breed_mpi my_newton_mpi.cpp )
+TARGET_LINK_LIBRARIES( breed_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${NLOPT_LIBRARY} ${MUPARSER_LIBRARY})
 
-ADD_EXECUTABLE( my_newton_cs_mpi my_newton_cs_mpi.cpp )
-TARGET_LINK_LIBRARIES( my_newton_cs_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${NLOPT_LIBRARY} )
+ADD_EXECUTABLE( breed_cs_mpi my_newton_cs_mpi.cpp )
+TARGET_LINK_LIBRARIES( breed_cs_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${NLOPT_LIBRARY} )
 
 ADD_EXECUTABLE( breed_minj_mpi breed_minj_mpi.cpp )
 TARGET_LINK_LIBRARIES( breed_minj_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
