--- a/source/utils/CMakeLists.txt
+++ b/source/utils/CMakeLists.txt
@@ -1,9 +1,9 @@
 
 ADD_EXECUTABLE( binR_to_atus2 binR_to_atus2.cpp )
-TARGET_LINK_LIBRARIES( binR_to_atus2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
+TARGET_LINK_LIBRARIES( binR_to_atus2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
 
 ADD_EXECUTABLE( binC_to_atus2 binC_to_atus2.cpp )
-TARGET_LINK_LIBRARIES( binC_to_atus2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
+TARGET_LINK_LIBRARIES( binC_to_atus2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
 
 ADD_EXECUTABLE( binR_to_binC binR_to_binC.cpp )
 TARGET_LINK_LIBRARIES( binR_to_binC ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
