--- a/source/utils/CMakeLists.txt
+++ b/source/utils/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+ADD_EXECUTABLE( gen_Psi_1 gen_Psi_1.cpp )
+TARGET_LINK_LIBRARIES( gen_Psi_1 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} )
+
 ADD_EXECUTABLE( binR_to_atus2 binR_to_atus2.cpp )
 TARGET_LINK_LIBRARIES( binR_to_atus2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
 
