1D real time propagation with operator splitting added

--- a/source/realtime/CMakeLists.txt
+++ b/source/realtime/CMakeLists.txt
@@ -10,3 +10,6 @@ TARGET_LINK_LIBRARIES( rt_prop_mpi_cs ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_
 
 ADD_EXECUTABLE( rt_prop rtprop_1.cpp )
 TARGET_LINK_LIBRARIES( rt_prop ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
+
+ADD_EXECUTABLE( rt_prop_2 rtprop_2.cpp )
+TARGET_LINK_LIBRARIES( rt_prop_2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
