changed to deal.ii recommended way to include cmake
DIMENSION -> SPATIAL_DIM

--- a/source/edu/CMakeLists.txt
+++ b/source/edu/CMakeLists.txt
@@ -1,3 +1,4 @@
 
 ADD_EXECUTABLE( edu_mpi edu_mpi.cpp )
-TARGET_LINK_LIBRARIES( edu_mpi ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY})
+DEAL_II_SETUP_TARGET( edu_mpi )
+TARGET_LINK_LIBRARIES( edu_mpi myatus )
