--- a/source/utils/CMakeLists.txt
+++ b/source/utils/CMakeLists.txt
@@ -1,18 +1,23 @@
 
 ADD_EXECUTABLE( gen_Psi_1 gen_Psi_1.cpp )
-TARGET_LINK_LIBRARIES( gen_Psi_1 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} )
+DEAL_II_SETUP_TARGET( gen_Psi_1 )
+TARGET_LINK_LIBRARIES( gen_Psi_1 myatus )
 
 ADD_EXECUTABLE( binR_to_atus2 binR_to_atus2.cpp )
-TARGET_LINK_LIBRARIES( binR_to_atus2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
+DEAL_II_SETUP_TARGET( binR_to_atus2 )
+TARGET_LINK_LIBRARIES( binR_to_atus2 myatus )
 
 ADD_EXECUTABLE( binC_to_atus2 binC_to_atus2.cpp )
-TARGET_LINK_LIBRARIES( binC_to_atus2 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
+DEAL_II_SETUP_TARGET( binC_to_atus2 )
+TARGET_LINK_LIBRARIES( binC_to_atus2 myatus )
 
 ADD_EXECUTABLE( binR_to_binC binR_to_binC.cpp )
-TARGET_LINK_LIBRARIES( binR_to_binC ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
+DEAL_II_SETUP_TARGET( binR_to_binC )
+TARGET_LINK_LIBRARIES( binR_to_binC myatus )
 
 ADD_EXECUTABLE( binR_to_binC_1 binR_to_binC_1.cpp )
-TARGET_LINK_LIBRARIES( binR_to_binC_1 ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} ${MUPARSER_LIBRARY} )
+DEAL_II_SETUP_TARGET( binR_to_binC_1 )
+TARGET_LINK_LIBRARIES( binR_to_binC_1 myatus )
 
 #ADD_EXECUTABLE( gen_qsubs gen_qsubs.cpp )
 #TARGET_LINK_LIBRARIES( gen_qsubs ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
