--- a/source/lib/CMakeLists.txt
+++ b/source/lib/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-ADD_LIBRARY( myatus MyParameterHandler.cpp my_table.cpp mmio.c pugixml.cpp )
+ADD_LIBRARY( myatus MyParameterHandler.cpp my_table.cpp mmio.c pugiconfig.hpp pugixml.hpp pugixml.cpp )
 TARGET_LINK_LIBRARIES( myatus m gomp )
 
 ADD_EXECUTABLE( testread_xml testread_xml.cpp )
