--- a/source/trash/CMakeLists.txt
+++ b/source/trash/CMakeLists.txt
@@ -20,8 +20,9 @@
 # ADD_EXECUTABLE( testBC testBC.cc )
 # TARGET_LINK_LIBRARIES( testBC ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
 # 
-ADD_EXECUTABLE( test_load_mult_bin test_load_mult_bin.cpp )
-TARGET_LINK_LIBRARIES( test_load_mult_bin ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
+#ADD_EXECUTABLE( test_load_mult_bin test_load_mult_bin.cpp )
+#TARGET_LINK_LIBRARIES( test_load_mult_bin ${MPI_CXX_LIBRARIES} myatus ${GSL_LIBRARY_1} ${GSL_LIBRARY_2} m ${DEAL_II_LIBRARY} ${PETSC_LIBRARY} )
 
 #ADD_EXECUTABLE( test_random test_random.cpp )
 #TARGET_LINK_LIBRARIES( test_random m )
+
